--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,11 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src=“https://maps.googleapis.com/maps/api/js?key=AIzaSyBqnazI9Eyf284BuR6qjVxkJ6SzCO3ZG4s”></script>
     <title>React App</title>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqnazI9Eyf284BuR6qjVxkJ6SzCO3ZG4s&libraries=places"
+      defer
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
