--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Journey Journal</title>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqnazI9Eyf284BuR6qjVxkJ6SzCO3ZG4s&libraries=places"
       defer
